--- a/mods/ts/rules/world.yaml
+++ b/mods/ts/rules/world.yaml
@@ -252,6 +252,7 @@ World:
 	ChatCommands:
 	DevCommands:
 	DebugVisualizationCommands:
+	HierarchicalPathFinderOverlay:
 	PlayerCommands:
 	HelpCommand:
 	BuildingInfluence:
