--- a/mods/d2k/mod.yaml
+++ b/mods/d2k/mod.yaml
@@ -221,7 +221,7 @@ SpriteSequenceFormat: DefaultSpriteSequence
 ModelSequenceFormat: DefaultModelSequence
 
 AssetBrowser:
-	SpriteExtensions: .shp, .r8
+	SpriteExtensions: .shp, .r8, .tmp
 	AudioExtensions: .aud, .wav
 	VideoExtensions: .vqa
 
