--- a/mods/modcontent/mod.yaml
+++ b/mods/modcontent/mod.yaml
@@ -69,4 +69,4 @@ TerrainFormat: DefaultTerrain
 
 SpriteSequenceFormat: DefaultSpriteSequence
 
-ModelSequenceFormat: PlaceholderModelSequence
+ModelSequenceFormat: DefaultModelSequence
