--- a/mods/ts/mod.yaml
+++ b/mods/ts/mod.yaml
@@ -264,6 +264,8 @@ SoundFormats: Aud, Wav
 
 SpriteFormats: ShpTS, TmpTS, ShpTD
 
+ModelFormats: Vxl
+
 VideoFormats: Vqa
 
 TerrainFormat: DefaultTerrain
@@ -276,7 +278,7 @@ SpriteSequenceFormat: TilesetSpecificSpriteSequence
 		TEMPERATE: t
 		SNOW: a
 
-ModelSequenceFormat: VoxelModelSequence
+ModelSequenceFormat: DefaultModelSequence
 
 AssetBrowser:
 	SpriteExtensions: .shp, .tem, .sno
