--- a/mods/ts/rules/aircraft.yaml
+++ b/mods/ts/rules/aircraft.yaml
@@ -471,7 +471,7 @@ APACHE:
 		EmptySequence: pip-ammoempty
 		Palette: pips
 	WithShadow:
-	WithVoxelBody:
+	WithModelBody:
 		ShowShadow: False
 
 HUNTER:
