--- a/mods/cnc/mod.yaml
+++ b/mods/cnc/mod.yaml
@@ -243,7 +243,7 @@ SpriteSequenceFormat: ClassicTilesetSpecificSpriteSequence
 		DESERT: .des
 		JUNGLE: .jun
 
-ModelSequenceFormat: PlaceholderModelSequence
+ModelSequenceFormat: DefaultModelSequence
 
 AssetBrowser:
 	SpriteExtensions: .shp, .tem, .des, .sno, .jun
