--- a/mods/d2k/mod.yaml
+++ b/mods/d2k/mod.yaml
@@ -218,7 +218,7 @@ TerrainFormat: DefaultTerrain
 
 SpriteSequenceFormat: DefaultSpriteSequence
 
-ModelSequenceFormat: PlaceholderModelSequence
+ModelSequenceFormat: DefaultModelSequence
 
 AssetBrowser:
 	SpriteExtensions: .shp, .r8
