--- a/mods/ra/mod.yaml
+++ b/mods/ra/mod.yaml
@@ -245,7 +245,7 @@ SpriteSequenceFormat: ClassicTilesetSpecificSpriteSequence
 		INTERIOR: .int
 		DESERT: .des
 
-ModelSequenceFormat: PlaceholderModelSequence
+ModelSequenceFormat: DefaultModelSequence
 
 AssetBrowser:
 	SpriteExtensions: .shp, .tmp, .tem, .des, .sno, .int
