--- a/mods/ts/rules/husks.yaml
+++ b/mods/ts/rules/husks.yaml
@@ -6,7 +6,7 @@ DSHP.Husk:
 		TurnSpeed: 20
 		Speed: 168
 	-RenderSprites:
-	RenderVoxels:
+	RenderModels:
 		Image: dshp
 
 ORCA.Husk:
@@ -18,7 +18,7 @@ ORCA.Husk:
 		Speed: 186
 	RenderSprites:
 		Image: orca
-	RenderVoxels:
+	RenderModels:
 		Image: orca
 
 ORCA.Husk.EMP:
@@ -36,7 +36,7 @@ ORCAB.Husk:
 		MaximumSpinSpeed: 24
 	RenderSprites:
 		Image: orcab
-	RenderVoxels:
+	RenderModels:
 		Image: orcab
 
 ORCAB.Husk.EMP:
@@ -52,7 +52,7 @@ ORCATRAN.Husk:
 		Speed: 84
 	RenderSprites:
 		Image: orcatran
-	RenderVoxels:
+	RenderModels:
 		Image: orcatran
 
 ORCATRAN.Husk.EMP:
@@ -68,7 +68,7 @@ TRNSPORT.Husk:
 		Speed: 149
 	RenderSprites:
 		Image: trnsport
-	RenderVoxels:
+	RenderModels:
 		Image: trnsport
 
 TRNSPORT.Husk.EMP:
@@ -86,7 +86,7 @@ SCRIN.Husk:
 		MaximumSpinSpeed: 24
 	RenderSprites:
 		Image: scrin
-	RenderVoxels:
+	RenderModels:
 		Image: scrin
 
 SCRIN.Husk.EMP:
@@ -105,7 +105,7 @@ APACHE.Husk:
 		Sequence: rotor
 	RenderSprites:
 		Image: apache
-	RenderVoxels:
+	RenderModels:
 		Image: apache
 
 APACHE.Husk.EMP:
