--- a/mods/ts/rules/misc.yaml
+++ b/mods/ts/rules/misc.yaml
@@ -32,7 +32,7 @@ harv.colorpicker:
 	Inherits: HARV
 	-Buildable:
 	-MapEditorData:
-	RenderVoxels:
+	RenderModels:
 		Image: harv
 		Palette: colorpicker
 		Scale: 18
@@ -41,7 +41,7 @@ hvr.colorpicker:
 	Inherits: HVR
 	-Buildable:
 	-MapEditorData:
-	RenderVoxels:
+	RenderModels:
 		Image: hvr
 		Palette: colorpicker
 		Scale: 18
@@ -50,7 +50,7 @@ stnk.colorpicker:
 	Inherits: STNK
 	-Buildable:
 	-MapEditorData:
-	RenderVoxels:
+	RenderModels:
 		Image: stnk
 		Palette: colorpicker
 		Scale: 18
