Add a PathFinderOverlay to visualize path searches.
Activated with the '/path-debug' chat command, this displays the explored search space and costs when searching for paths. It supports custom movement layers, bi-directional searches as well as visualizing searches over the abstract graph of the HierarchicalPathFinder. The most recent search among selected units is shown.

--- a/mods/ts/rules/world.yaml
+++ b/mods/ts/rules/world.yaml
@@ -252,6 +252,7 @@ World:
 	ChatCommands:
 	DevCommands:
 	DebugVisualizationCommands:
+	PathFinderOverlay:
 	HierarchicalPathFinderOverlay:
 	PlayerCommands:
 	HelpCommand:
