修复悬崖光照错误，为vxl添加tint支持，为矿柱添加光照

--- a/mods/ts/rules/civilian-structures.yaml
+++ b/mods/ts/rules/civilian-structures.yaml
@@ -1689,10 +1689,9 @@ INBLULMP:
 
 TSTLAMP:
 	Inherits: GALITE
-	-TerrainLightSource:
-	WithIdleOverlay@LIGHTING:
-		Sequence: lighting
-		Palette: alpha
+	# WithIdleOverlay@LIGHTING:
+	# 	Sequence: lighting
+	# 	Palette: alpha
 
 GAICBM:
 	Inherits: ^Building
