--- a/mods/ts/rules/defaults.yaml
+++ b/mods/ts/rules/defaults.yaml
@@ -1046,6 +1046,13 @@
 		Interval: 500, 1000
 	MapEditorData:
 		Categories: Resource spawn
+	TerrainLightSource:
+		Range: 4c128
+		Intensity: 0.01
+		RedTint: 0.01
+		GreenTint: 0.8
+		BlueTint: 0.01
+
 
 ^Tree:
 	Inherits@1: ^SpriteActor
