--- a/mods/ts/rules/civilian-structures.yaml
+++ b/mods/ts/rules/civilian-structures.yaml
@@ -1689,9 +1689,10 @@ INBLULMP:
 
 TSTLAMP:
 	Inherits: GALITE
-	# WithIdleOverlay@LIGHTING:
-	# 	Sequence: lighting
-	# 	Palette: alpha
+	WithIdleOverlay@LIGHTING:
+		Sequence: lighting
+		Palette: alpha
+		RequiresCondition: !empdisable
 
 GAICBM:
 	Inherits: ^Building
